[package]
name = "plumpinator"
version = "0.1.0"
authors = ["Mårten Nilsson <m@martennilsson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rocket = "0.4.4"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
rocket_contrib = { version = "0.4.4", default-features = false, features = ["json"] }

